# VoIP-SIP-Simulator

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-SIP-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  SIP  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-SIP-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-1266349363051fe6a4cb.json  cache-v2-5bb677960e192edd392e.json  cmakeFiles-v1-24936bdaff06bf71d110.json  codemodel-v2-5283867bb7c57d7e54e1.json  codemodel-v2-f84ce61e23c327a42aa9.json  directory-.-Debug-2e373b9224aca155e22d.json  directory-.-Debug-39fbe0b9695259cef8f3.json  index-2026-05-27T03-11-29-0320.json  index-2026-06-10T00-48-47-0092.json  target-SIP-Debug-1bf9c94a0e9a5abf73be.json  target-SIP-Debug-f2d0e72a3772897e724c.json  target-SIP_autogen-Debug-3cb40ca6eb02e7386c47.json
build-SIP-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-0e8b64bbc49ded93075f.json  codemodel-v2-b8aa587e9621f4873041.json  index-2026-05-27T02-56-45-0318.json  target-SIP-Debug-4b8db72e45d04633f0c5.json  target-SIP_autogen-Debug-1eca669a58ffb4656b59.json  target-SIP_autogen_timestamp_deps-Debug-850b391e2e93fb9379ca.json
build-SIP-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-SIP-Desktop-Debug/SIP_autogen/: deps  moc_predefs.h
build-SIP-Desktop-Debug/SIP_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-SIP-Desktop-Debug/SIP_autogen/include/: ui_mainwindow.h
config_Asterisk/: extensions.conf  pjsip.conf
